@@ -560,7 +560,7 @@ Media Independent Interface (MII)</property>
 	  <property name="update_policy">GTK_UPDATE_ALWAYS</property>
 	  <property name="snap_to_ticks">False</property>
 	  <property name="wrap">False</property>
-	  <property name="adjustment">0 1 100 1 10 10</property>
+	  <property name="adjustment">0 0 100 1 10 10</property>
 	</widget>
 	<packing>
 	  <property name="left_attach">1</property>
@@ -888,7 +888,7 @@ B/G (2.4 GHz)</property>
 	  <property name="update_policy">GTK_UPDATE_ALWAYS</property>
 	  <property name="snap_to_ticks">False</property>
 	  <property name="wrap">False</property>
-	  <property name="adjustment">0 1 100 1 10 10</property>
+	  <property name="adjustment">0 0 100 1 10 10</property>
 	</widget>
 	<packing>
 	  <property name="left_attach">1</property>
@@ -909,7 +909,7 @@ B/G (2.4 GHz)</property>
 	  <property name="update_policy">GTK_UPDATE_ALWAYS</property>
 	  <property name="snap_to_ticks">False</property>
 	  <property name="wrap">False</property>
-	  <property name="adjustment">0 1 100 1 10 10</property>
+	  <property name="adjustment">0 0 100 1 10 10</property>
 	</widget>
 	<packing>
 	  <property name="left_attach">1</property>
@@ -988,7 +988,7 @@ B/G (2.4 GHz)</property>
 	  <property name="update_policy">GTK_UPDATE_ALWAYS</property>
 	  <property name="snap_to_ticks">False</property>
 	  <property name="wrap">False</property>
-	  <property name="adjustment">0 1 100 1 10 10</property>
+	  <property name="adjustment">0 0 100 1 10 10</property>
 	</widget>
 	<packing>
 	  <property name="left_attach">1</property>
